[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/sprites/personagens/vilao/sprite_vilao1.png" type="Texture" id=1]
[ext_resource path="res://assets/sprites/personagens/vilao/sprite_vilao2.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/personagens/vilao/sprite_vilao3.png" type="Texture" id=3]
[ext_resource path="res://assets/inimigos/script_jason.gd" type="Script" id=4]
[ext_resource path="res://assets/sprites/personagens/vilao/sprite_vilao4.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 17.781, 34.0326 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "parado",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 5 ), ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "andando",
"speed": 6.0
} ]

[node name="Node2D" type="Node2D"]

[node name="inimigo" type="KinematicBody2D" parent="."]
collision_layer = 2147483652
script = ExtResource( 4 )

[node name="DetectorParedeEsq" type="RayCast2D" parent="inimigo"]
position = Vector2( -14.3957, -17.0266 )
rotation = 0.019592
scale = Vector2( 1, 0.8 )
enabled = true
collision_mask = 9

[node name="DetectorParedeDir" type="RayCast2D" parent="inimigo"]
position = Vector2( 29.7036, -17.0266 )
rotation = -0.0078477
scale = Vector2( 1, 0.8 )
enabled = true
collision_mask = 9

[node name="CollisionShape2D" type="CollisionShape2D" parent="inimigo"]
position = Vector2( 6.88651, 0 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="inimigo"]
position = Vector2( 1.05946, -7.68111 )
scale = Vector2( 1.51318, 1.70355 )
frames = SubResource( 2 )
animation = "andando"
frame = 3

[node name="detectaPersonagem" type="RayCast2D" parent="inimigo"]
position = Vector2( 32.0972, 8.60561 )
rotation = 1.58708
scale = Vector2( 0.768921, -3.10921 )
enabled = true
collision_mask = 2

[node name="detectaPersonagem2" type="RayCast2D" parent="inimigo"]
position = Vector2( -22.3217, 10.193 )
rotation = 4.71223
scale = Vector2( 0.768921, -3.10921 )
enabled = true
collision_mask = 2
